--- a/trabajoscss/flex4.html
+++ b/trabajoscss/flex4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,38 +10,45 @@
             display: flex;
             justify-content: center;
         }
+
         .box {
-            border: 3px solid black;
+            border: 1px solid black;
             height: 100vh;
             width: 80%;
-            background: orange;
+            background-color: rgb(115, 124, 124);
         }
+
         .box .header {
             display: flex;
             border: 1px solid black;
         }
+
         .box .header .logo {
-            background-color: yellow;
+            background-color: rgb(255, 6, 47);
             height: 40px;
             width: 100px;
         }
-        .box .header .tobbar {
-            background-color: chartreuse;
+
+        .box .header .topbar {
+            background-color: rgb(56, 67, 64);
             height: 40px;
             width: 100%;
             display: flex;
             flex-direction: column;
         }
-        .box .header .tobbar .banner {
-            background-color: darkgreen;
-            height: 20px;
+
+        .box .header .topbar .banner {
+            height: 40px;
             width: 100%;
-        }   
-        .box .header .tobbar .menu {
-            background-color: cadetblue;
-            height: 20px;
-            width: 100%;
+            background-color: rgb(112, 9, 28);
         }
+
+        .box .header .topbar .menu {
+            height: 20px;
+            width: 100%;
+            background-color: rgb(225, 112, 121);
+        }
+        
     </style>
 </head>
 
@@ -50,17 +57,16 @@
         <div class="box">
             <div class="header">
                 <div class="logo"></div>
-                <div class="tobbar">
+                <div class="topbar">
                     <div class="banner"></div>
-                    <div class="menu">
-                    </div>
-                </div>
-                <div class="main">
-                    <div class="options"></div>
-                    <div class="content"></div>
+                    <div class="menu"></div>
                 </div>
             </div>
+            <div class="main">
+                <div class="options"></div>
+                <div class="content"></div>
+            </div>
         </div>
+    </div>
 </body>
-
 </html>
