--- a/proyectos.html
+++ b/proyectos.html
@@ -46,7 +46,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">DOCUMENTO CON HTML</h5>
               <p class="text-muted">Diseño de un documento a partir de un ejemlo</p>
-              <a href="DEY-CODE/trabajoshtml/pdf/pdf.html" class="btn btn-outline-primary">Ver Trabajo</a>
+              <a href="trabajoshtml/pdf/pdf.html" class="btn btn-outline-primary">Ver Trabajo</a>
             </div>
           </div>
         </div>
@@ -55,7 +55,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">COMPUTADORA CON HTML Y CSS</h5>
               <p class="text-muted">Creacion de una computadora de escritorio a partir de formas geometricas.</p>
-              <a href="DEY-CODE/trabajoshtml/computadora.html" class="btn btn-outline-primary">Ver Trabajo</a>
+              <a href="trabajoshtml/computadora.html" class="btn btn-outline-primary">Ver Trabajo</a>
             </div>
           </div>
         </div>
@@ -64,7 +64,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">CALCULADORA</h5>
               <p class="text-muted">Creacion de calculadora basica con HTML, CSS Y JS.</p>
-              <a href="DEY-CODE/calculadora-js-main/index.html" class="btn btn-outline-primary">Ver Trabajo</a>
+              <a href="calculadora-js-main/index.html" class="btn btn-outline-primary">Ver Trabajo</a>
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 1</h5>
               <p class="text-muted">practicas css flex 1.</p>
-              <a href="DEY-CODE/trabajoscss/flex1.html" class="btn btn-outline-success">Ver Ejercicio</a>
+              <a href="trabajoscss/flex1.html" class="btn btn-outline-success">Ver Ejercicio</a>
             </div>
           </div>
         </div>
@@ -150,7 +150,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 2</h5>
               <p class="text-muted">practicas css flex 2.</p>
-              <a href="DEY-CODE/trabajoscss/flex2.html" class="btn btn-outline-success">Ver Ejercicio</a>
+              <a href="trabajoscss/flex2.html" class="btn btn-outline-success">Ver Ejercicio</a>
             </div>
           </div>
         </div>
@@ -159,7 +159,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 3</h5>
               <p class="text-muted">practicas css flex 3.</p>
-              <a href="DEY-CODE/trabajoscss/flex3.html" class="btn btn-outline-success">Ver Ejercicio</a>
+              <a href="trabajoscss/flex3.html" class="btn btn-outline-success">Ver Ejercicio</a>
             </div>
           </div>
         </div>
@@ -168,7 +168,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 4</h5>
               <p class="text-muted">practicas css felx 4.</p>
-              <a href="DEY-CODE/trabajoscss/flex4.html" class="btn btn-outline-success">Ver Ejercicio</a>
+              <a href="trabajoscss/flex4.html" class="btn btn-outline-success">Ver Ejercicio</a>
             </div>
           </div>
         </div>
@@ -177,7 +177,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 5</h5>
               <p class="text-muted">cuadro que se mueve.</p>
-              <a href="DEY-CODE/trabajoscss/cuadrado.html" class="btn btn-outline-success">Ver Ejercicio</a>
+              <a href="trabajoscss/cuadrado.html" class="btn btn-outline-success">Ver Ejercicio</a>
             </div>
           </div>
         </div>
@@ -194,7 +194,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 1</h5>
               <p class="text-muted">Pequeño script con eventos, alertas y manipulación del DOM.</p>
-              <a href="DEY-CODE/trabajosjava/pract01.html" class="btn btn-outline-warning text-dark">Probar</a>
+              <a href="trabajosjava/pract01.html" class="btn btn-outline-warning text-dark">Probar</a>
             </div>
           </div>
         </div>
