--- a/proyectos.html
+++ b/proyectos.html
@@ -80,7 +80,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 1</h5>
               <p class="text-muted">introduccion a HTML</p>
-              <a href="html/estructura.html" class="btn btn-outline-danger">Ver Ejercicio</a>
+              <a href="/trabajoshtml/html/estructura.html" class="btn btn-outline-danger">Ver Ejercicio</a>
             </div>
           </div>
         </div>
