--- a/proyectos.html
+++ b/proyectos.html
@@ -46,7 +46,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">DOCUMENTO CON HTML</h5>
               <p class="text-muted">Diseño de un documento a partir de un ejemlo</p>
-              <a href="trabajoshtml/pdf/pdf.html" class="btn btn-outline-primary">Ver Trabajo</a>
+              <a href="DEY-CODE/trabajoshtml/pdf/pdf.html" class="btn btn-outline-primary">Ver Trabajo</a>
             </div>
           </div>
         </div>
