--- a/proyectos.html
+++ b/proyectos.html
@@ -45,8 +45,8 @@
           <div class="card border-0 shadow-sm h-100">
             <div class="card-body text-center">
               <h5 class="fw-bold">DOCUMENTO CON HTML</h5>
-              <p class="text-muted">Diseño de un documento a partir de un ejemlo</p>
-              <a href="DEY-CODE/trabajoshtml/pdf/pdf.html" class="btn btn-outline-primary">Ver Trabajo</a>
+              <p class="text-muted">Diseño de un documento a partir de un ejemloO</p>
+              <a href="trabajoshtml/pdf/pdf.html" class="btn btn-outline-primary">Ver Trabajo</a>
             </div>
           </div>
         </div>
@@ -154,33 +154,6 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 3</h5>
-              <p class="text-muted">practicas css flex 3.</p>
-              <a href="trabajoscss/flex3.html" class="btn btn-outline-success">Ver Ejercicio</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 4</h5>
-              <p class="text-muted">practicas css felx 4.</p>
-              <a href="trabajoscss/flex4.html" class="btn btn-outline-success">Ver Ejercicio</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 5</h5>
-              <p class="text-muted">cuadro que se mueve.</p>
-              <a href="trabajoscss/cuadrado.html" class="btn btn-outline-success">Ver Ejercicio</a>
-            </div>
-          </div>
-        </div>
 
       </div>
     </section>
@@ -203,7 +176,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 2</h5>
               <p class="text-muted">Pequeño script con eventos, alertas y manipulación del DOM.</p>
-              <a href="DEY-CODE/trabajosjava/pract02.html" class="btn btn-outline-warning text-dark">Probar</a>
+              <a href="trabajosjava/pract02.html" class="btn btn-outline-warning text-dark">Probar</a>
             </div>
           </div>
         </div>
@@ -212,7 +185,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 3</h5>
               <p class="text-muted">Pequeño script con eventos, alertas y manipulación del DOM.</p>
-              <a href="DEY-CODE/trabajosjava/pract03.html" class="btn btn-outline-warning text-dark">Probar</a>
+              <a href="trabajosjava/pract03.html" class="btn btn-outline-warning text-dark">Probar</a>
             </div>
           </div>
         </div>
@@ -221,7 +194,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 4</h5>
               <p class="text-muted">Pequeño script con eventos, alertas y manipulación del DOM.</p>
-              <a href="DEY-CODE/trabajosjava/pract04.html" class="btn btn-outline-warning text-dark">Probar</a>
+              <a href="trabajosjava/pract04.html" class="btn btn-outline-warning text-dark">Probar</a>
             </div>
           </div>
         </div>
@@ -230,7 +203,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 5</h5>
               <p class="text-muted">Pequeño script con eventos, alertas y manipulación del DOM.</p>
-              <a href="DEY-CODE/trabajosjava/pract05.html" class="btn btn-outline-warning text-dark">Probar</a>
+              <a href="trabajosjava/pract05.html" class="btn btn-outline-warning text-dark">Probar</a>
             </div>
           </div>
         </div>
@@ -239,11 +212,55 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 6</h5>
               <p class="text-muted">Pequeño script con eventos, alertas y manipulación del DOM.</p>
-              <a href="DEY-CODE/trabajosjava/pract06.html" class="btn btn-outline-warning text-dark">Probar</a>
+              <a href="trabajosjava/pract06.html" class="btn btn-outline-warning text-dark">Probar</a>
             </div>
           </div>
         </div>
 
+      </div>
+      
+    </section>
+
+        <!-- EJERCICIOS BOOTSTRAP -->
+    <section id="js" class="mb-5">
+      <h2 class="fw-bold text-success mb-4 text-center">⚡ Ejercicios JavaScript</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm h-100">
+            <div class="card-body text-center">
+              <h5 class="fw-bold">Ejercicio 1</h5>
+              <p class="text-muted">trabjo de bootstrap introduccion.</p>
+              <a href="practicas/bootstrap-5.3.8-dist/boot01.html" class="btn btn-outline-success text-dark">Probar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm h-100">
+            <div class="card-body text-center">
+              <h5 class="fw-bold">Ejercicio 2</h5>
+              <p class="text-muted">trabjo de bootstrap con mas detalles.</p>
+              <a href="practicas/bootstrap-5.3.8-dist/boot02.html" class="btn btn-outline-success text-dark">Probar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm h-100">
+            <div class="card-body text-center">
+              <h5 class="fw-bold">Ejercicio 3</h5>
+              <p class="text-muted">trabjo de bootstrap con mas detalles.</p>
+              <a href="practicas/bootstrap-5.3.8-dist/boot03.html" class="btn btn-outline-success text-dark">Probar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm h-100">
+            <div class="card-body text-center">
+              <h5 class="fw-bold">Ejercicio 4</h5>
+              <p class="text-muted">trabjo de bootstrap con mas detalles.</p>
+              <a href="practicas/bootstrap-5.3.8-dist/boot04.html" class="btn btn-outline-success text-dark">Probar</a>
+            </div>
+          </div>
+        </div>
       </div>
       
     </section>
