--- a/proyectos.html
+++ b/proyectos.html
@@ -154,6 +154,35 @@
             </div>
           </div>
         </div>
+                </div>
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm h-100">
+            <div class="card-body text-center">
+              <h5 class="fw-bold">Ejercicio 2</h5>
+              <p class="text-muted">practicas css flex 2.</p>
+              <a href="trabajoscss/flex3.html" class="btn btn-outline-success">Ver Ejercicio</a>
+            </div>
+          </div>
+        </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm h-100">
+            <div class="card-body text-center">
+              <h5 class="fw-bold">Ejercicio 2</h5>
+              <p class="text-muted">practicas css flex 2.</p>
+              <a href="trabajoscss/flex4.html" class="btn btn-outline-success">Ver Ejercicio</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm h-100">
+            <div class="card-body text-center">
+              <h5 class="fw-bold">Ejercicio 2</h5>
+              <p class="text-muted">practicas css flex 2.</p>
+              <a href="trabajoscss/cuadrado.html" class="btn btn-outline-success">Ver Ejercicio</a>
+            </div>
+          </div>
+        </div>
 
       </div>
     </section>
