--- a/proyectos.html
+++ b/proyectos.html
@@ -89,43 +89,7 @@
             <div class="card-body text-center">
               <h5 class="fw-bold">Ejercicio 2</h5>
               <p class="text-muted">Práctica de etiquetas principales, encabezados y párrafos.</p>
-              <a href="html/estructura.html" class="btn btn-outline-danger">Ver Ejercicio</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 3</h5>
-              <p class="text-muted">Práctica de etiquetas principales, encabezados y párrafos.</p>
-              <a href="html/estructura.html" class="btn btn-outline-danger">Ver Ejercicio</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 4</h5>
-              <p class="text-muted">Práctica de etiquetas principales, encabezados y párrafos.</p>
-              <a href="html/estructura.html" class="btn btn-outline-danger">Ver Ejercicio</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 5</h5>
-              <p class="text-muted">Práctica de etiquetas principales, encabezados y párrafos.</p>
-              <a href="html/estructura.html" class="btn btn-outline-danger">Ver Ejercicio</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm h-100">
-            <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 6</h5>
-              <p class="text-muted">Práctica de etiquetas principales, encabezados y párrafos.</p>
-              <a href="html/estructura.html" class="btn btn-outline-danger">Ver Ejercicio</a>
+              <a href="trabajoshtml/web2.html" class="btn btn-outline-danger">Ver Ejercicio</a>
             </div>
           </div>
         </div>
