--- a/proyectos.html
+++ b/proyectos.html
@@ -214,7 +214,7 @@
 
         <!-- EJERCICIOS BOOTSTRAP -->
     <section id="js" class="mb-5">
-      <h2 class="fw-bold text-success mb-4 text-center">⚡ Ejercicios JavaScript</h2>
+      <h2 class="fw-bold text-success mb-4 text-center">⚡ Ejercicios Bootstrap</h2>
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card border-0 shadow-sm h-100">
