--- a/trabajoshtml/computadora.html
+++ b/trabajoshtml/computadora.html
@@ -79,7 +79,7 @@
             transform: translateX(-50%);
             width: 40px;
             height: 40px; 
-            background-color: #3c4a57;
+            background-color: #4a573c;
             z-index: 1;
         }
 
@@ -90,7 +90,7 @@
             transform: translateX(-50%);
             width: 200px;
             height: 10px; 
-            background-color: #3c4a57;
+            background-color: #0b0c0d;
             border-radius: 5px;
         }
 
@@ -101,7 +101,7 @@
             transform: translateX(-50%);
             width: 450px;
             height: 110px;
-            background-color: #4c5a67;
+            background-color: #ea4214;
             border-radius: 8px;
             padding: 10px;
             display: grid;
