--- a/proyectos.html
+++ b/proyectos.html
@@ -121,7 +121,7 @@
         <div class="col-md-4">
           <div class="card border-0 shadow-sm h-100">
             <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 2</h5>
+              <h5 class="fw-bold">Ejercicio 3</h5>
               <p class="text-muted">practicas css flex 2.</p>
               <a href="trabajoscss/flex3.html" class="btn btn-outline-success">Ver Ejercicio</a>
             </div>
@@ -130,7 +130,7 @@
         <div class="col-md-4">
           <div class="card border-0 shadow-sm h-100">
             <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 2</h5>
+              <h5 class="fw-bold">Ejercicio 4</h5>
               <p class="text-muted">practicas css flex 2.</p>
               <a href="trabajoscss/flex4.html" class="btn btn-outline-success">Ver Ejercicio</a>
             </div>
@@ -139,7 +139,7 @@
         <div class="col-md-4">
           <div class="card border-0 shadow-sm h-100">
             <div class="card-body text-center">
-              <h5 class="fw-bold">Ejercicio 2</h5>
+              <h5 class="fw-bold">Ejercicio de cuadro dinamico</h5>
               <p class="text-muted">practicas css flex 2.</p>
               <a href="trabajoscss/cuadrado.html" class="btn btn-outline-success">Ver Ejercicio</a>
             </div>
